fix: resolve scrolling weird animation and hero section jumps

--- a/website/assets/styles/layout.less
+++ b/website/assets/styles/layout.less
@@ -24,12 +24,12 @@ html, body {
   }
 }
 // Apply this margin when there is a CTA banner on the homepage
-.homepage-cta-banner + .homepage-header-padding {
-  padding-top: 60px;
+.homepage-cta-banner + .homepage-header-top {
+  top: 52px;
 }
 @media (max-width: 767px) {
-  .homepage-cta-banner + .homepage-header-padding {
-    padding-top: 110px;
+  .homepage-cta-banner + .homepage-header-top {
+    top: 108px;
   }
 }
 .non-homepage-cta-banner {
@@ -145,12 +145,13 @@ html, body {
 } // Homepage header styles
 &.homepage-header {
   z-index: 9999;
-  position: fixed;
-  color: #ffffff;
+  position: absolute;
+  color: #fff;
   top: 0;
   left: 0;
   right: 0;
   &.sticky {
+    position: fixed;
     background-color: #fff;
     color: #192147;
 
